# policyshift

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
apps/web/: app.js  data.js  embed.html  index.html  study_results.json  styles.css
configs/distillation/: smoke.yaml
configs/dpo/: full_gpu.yaml  shift_clean_gpu.yaml  smoke.yaml
configs/evaluation/: phase2.yaml
configs/retrieval/: full.yaml
configs/rl/: full_gpu.yaml
configs/sft/: full_gpu.yaml  shift_clean_gpu.yaml
configs/smoke/: phase1.yaml  phase2.yaml  phase3_sft.yaml  phase4_dpo.yaml
configs/study/: full.yaml
docs/: BUILD_STATUS.md  COHERE_EXPERIMENT.md  DATA_CARD.md  FAILURE_TAXONOMY.md  FULL_GPU.md  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  MODEL_CARD.md  POST_TRAINING_STUDY.md  REAL_TRAINING.md  REPRODUCIBILITY.md  RESEARCH_DESIGN.md  REWARD_DESIGN.md  STAND_OUT_FOR_COHERE.md  TECHNICAL_REPORT.md  WEBSITE_INTEGRATION.md  resume_after_results.md
docs/site/: README.md  app.js  data.js  experiments.js  index.html  styles.css
notebooks/: PolicyShift_Full_GPU.ipynb
policies/ai_governance/: POL-AI-USE_1.0.json  POL-AI-USE_1.1.json  POL-AI-USE_2.0.json
policies/schemas/: CaseEvent.json  (+9 more)
portfolio_export/: README.md  RESUME_BULLETS.md  TECHNICAL_REPORT.md  results_summary.json  resume_bullets.json  website_card.json
report/: technical_report.md
schemas/: AgentAction.json  AgentTrajectory.json  CaseEvent.json  EvidenceItem.json  PolicyClause.json  PolicyDocument.json  PolicyException.json  PreferencePair.json  RewardBreakdown.json  VerifierResult.json
scripts/: build_preference_report.py  colab_dpo_pipeline.py  evaluate.py  evaluate_shift_clean.py  export_portfolio.py  export_web_artifacts.py  generate_cases.py  generate_policies.py  generate_preference_pairs.py  generate_teacher_trajectories.py  prepare_full_training_data.py  prepare_shift_clean_data.py  run_clean_shift_experiment.py  run_phase5_smoke.py  run_phase6_smoke.py  run_phase7_smoke.py  run_shift_experiment.py  serve_playback.py  train_distill_smoke.py  train_dpo.py  train_dpo_smoke.py  train_rl.py  train_sft.py  validate_dpo_data.py  validate_no_v2_leakage.py  validate_shift_split.py  validate_trajectories.py
(+93 files in other folders)
