[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyshift"
version = "0.1.0"
description = "Continual post-training for agents operating under evolving enterprise policies"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "PolicyShift Contributors" }]
keywords = [
  "llm",
  "post-training",
  "continual-learning",
  "tool-use",
  "enterprise-policies",
  "dpo",
  "distillation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "rich>=13.7",
  "typer>=0.12",
  "jsonschema>=4.21",
  "python-dateutil>=2.9",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
retrieval = [
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8",
]
training = [
  "torch>=2.2",
  "transformers>=4.42",
  "datasets>=2.19",
  "accelerate>=0.31",
  "peft>=0.11",
  "trl>=0.9",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
all = [
  "policyshift[dev,retrieval,training,api]",
]

[project.scripts]
policyshift = "policyshift.cli:app"

[project.urls]
Homepage = "https://github.com/policyshift/policyshift"
Documentation = "https://github.com/policyshift/policyshift/tree/main/docs"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/policies",
  "/configs",
  "/scripts",
  "/docs",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "phase1: Phase 1 functional environment tests",
  "integration: integration tests",
  "regression: regression tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["policyshift"]
mypy_path = "src"
